Finalized the main slides.

--- a/index.yaml
+++ b/index.yaml
@@ -118,4 +118,18 @@ Using your custom element:
 
 ------------------------------------------------------------------------
 
+### Results
 
+What ever, dude.. Show me some code!
+
+------------------------------------------------------------------------
+
+### Google's components
+
+* [Polymer Catalog](https://elements.polymer-project.org/)
+* Plenty of user created exist, Google-fu.
+
+------------------------------------------------------------------------
+
+# Thank you!
+## Questions, comments?
